[tool.poetry]
name = "hpcadvisor"
version = "0.1.0"
description = "hpc advisor"
authors = ["Marco Netto <marconetto@microsoft.com>"]
readme = "README.md"
packages = [{include = "hpcadvisor", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.30.0"
numpy = "^1.26.2"
pandas = "^2.1.3"
azure-batch = "^14.0.0"
azure-cli-core = "^2.53.1"
azure-identity = "^1.14.1"
azure-mgmt-compute = "^30.3.0"
azure-mgmt-monitor = "^6.0.2"
azure-mgmt-network = "^25.1.0"
azure-mgmt-resource = "^23.0.1"
matplotlib = "^3.8.2"
pytest = "^7.4.4"
azure-mgmt-netapp = "^13.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
